# odyssey

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  bochsrc.txt  compile_font.py  hdd-img.sh  limine.cfg  linker.lds
fonts/: zap_vga16.psf
scripts/: compile-font.py  make-efi-img.py
src/: 10x20.psf  _start.c  _start.cpp  config.hpp  convert.cpp  convert.hpp  cpu_exception.cpp  framebuffer.cpp  gdt.c  gdt.cpp  gdt.h  graphics.cpp  graphics.hpp  heap.cpp  icxxabi.cpp  icxxabi.h  idt.cpp  idt.h  int.c  int.cpp  int.h  int.hpp  isr.cpp  isr_indirection.S  kernel_info.hpp  kmain.cpp  log.h  main.c  mem_builtin.c  mem_builtin.cpp  operator_new.cpp  pmm.c  pmm.cpp  pmm.h  psf.cpp  psf.h  psf.hpp  terminal.c  terminal.h  terminal_printf.c  (+3 more)
src/acpi/: madt.hpp  rsdp.hpp  rsdt.hpp  sdt.hpp  sdt_header.hpp
src/graphics/: framebuffer.hpp  psf.hpp
src/kernel/: cpu_exception.hpp  info.hpp
src/low_level/: gdt.hpp  idt.hpp  isr.hpp  rsdp.hpp
src/memory/: heap.hpp  paging_structure.hpp  pmm.hpp  vmm.hpp
src/misc/: config.hpp  flag.hpp  log.hpp  round.hpp  types.hpp
